--- a/src/app/show-results/show-results.component.scss
+++ b/src/app/show-results/show-results.component.scss
@@ -51,24 +51,10 @@ mat-list-item{
   margin-top: 10px;
 }
 
-//.pan-chain {
-//  border-radius: 4px;
-//  margin: 10px;
-//}
-//
-//.pan-cycle {
-//  border-radius: 4px;
-//  margin: 10px;
-//}
-//
-//.pan-not-use {
-//}
+.mat-card mat-list mat-list-item {
+  font-size: 14px;
+}
 
 .mat-accordion .mat-expansion-panel:not(.mat-expanded), .mat-accordion .mat-expansion-panel:not(.mat-expansion-panel-spacing) {
   border-radius: 4px;
-  //margin: 10px;
 }
-
-//.mat-accordion .mat-expansion-panel-spacing:first-child {
-//  margin: 10px;
-//}
