--- a/src/app/show-results/show-results.component.scss
+++ b/src/app/show-results/show-results.component.scss
@@ -51,6 +51,11 @@ mat-list-item{
   margin-top: 10px;
 }
 
+.solution-info-card {
+  background-color: dimgrey;
+  margin-top: 10px;
+}
+
 .mat-card mat-list mat-list-item {
   font-size: 14px;
 }
