--- a/src/app/show-results/show-results.component.scss
+++ b/src/app/show-results/show-results.component.scss
@@ -26,6 +26,19 @@
   font-weight: bold;
 }
 
+.section-title-bold {
+  font-weight: bold
+}
+
+.solution-infos {
+  color: #9afaa7;
+  font-weight: bold
+}
+
+.instance-infos {
+  font-weight: bold
+}
+
 mat-expansion-panel{
   padding: 10px;
 }
